--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 	background-color: #FFFFFF;
 	text-align: center;
     font-family: 'Karla', sans-serif;
+    color: black;
 }
 
 #superior{
@@ -14,22 +15,10 @@
     border-radius: 10px 20px 20px;
 }
 
-ul#menu{
-    list-style-type: none;
-    text-decoration: none;
-}
-
-li a#menu {
-    display: block;
+#menu{
     color: black;
-    padding: 5px 5px;
-    text-decoration: none;
     font-size: 20;
-}
-
-li#menu{
-    float: left;
-    text-align: center;
+    list-style-type: none;
 }
 
 ul{
